--- a/bibliography.bib
+++ b/bibliography.bib
@@ -539,3 +539,10 @@ eprint = {https://doi.org/10.1287/mnsc.5.1.5}
   year = {2011},
   publisher = {IEEE}
 }
+
+@book{Tadelis2013,
+  title={Game theory: an introduction},
+  author={Tadelis, Steve},
+  year={2013},
+  publisher={Princeton University Press}
+}
