--- a/tex/evo_sserror_table.tex
+++ b/tex/evo_sserror_table.tex
@@ -1,20 +1,18 @@
 \begin{tabular}{lr}
 \toprule
-{} &  Evo SSerror \\
+{} &  evol\_SSerror \\
 \midrule
-count  &  1643.000000 \\
-mean   &     0.183524 \\
-std    &     0.216175 \\
-min    &     0.000000 \\
-5\%     &     0.015543 \\
-25\%    &     0.073650 \\
-30\%    &     0.094743 \\
-35\%    &     0.111698 \\
-50\%    &     0.138574 \\
-95\%    &     0.529412 \\
-max    &     1.529412 \\
-median &     0.138574 \\
-skew   &     3.488164 \\
-kurt   &    13.206905 \\
+count  &     474.00000 \\
+mean   &       0.17879 \\
+std    &       0.23557 \\
+min    &       0.00017 \\
+5\%     &       0.01744 \\
+25\%    &       0.06903 \\
+50\%    &       0.12764 \\
+95\%    &       0.65623 \\
+max    &       1.52941 \\
+median &       0.12764 \\
+skew   &       3.54225 \\
+kurt   &      13.00266 \\
 \bottomrule
 \end{tabular}
