--- a/tex/sserror_table.tex
+++ b/tex/sserror_table.tex
@@ -1,18 +1,18 @@
 \begin{tabular}{lr}
 \toprule
-{} &    SSerror \\
+{} &     SSE \\
 \midrule
-count  &  474.00000 \\
-mean   &    0.32869 \\
-std    &    0.38300 \\
-min    &    0.00000 \\
-5\%     &    0.02077 \\
-25\%    &    0.08128 \\
-50\%    &    0.16964 \\
-95\%    &    1.05882 \\
-max    &    2.47059 \\
-median &    0.16964 \\
-skew   &    1.76038 \\
-kurt   &    2.70693 \\
+count  &  1000.00000 \\
+mean   &     0.33762 \\
+std    &     0.39667 \\
+min    &     0.00000 \\
+5\%     &     0.02078 \\
+25\%    &     0.07597 \\
+50\%    &     0.17407 \\
+95\%    &     1.05943 \\
+max    &     2.47059 \\
+median &     0.17407 \\
+skew   &     1.87231 \\
+kurt   &     3.60029 \\
 \bottomrule
 \end{tabular}
