--- a/tex/evo_sserror_table.tex
+++ b/tex/evo_sserror_table.tex
@@ -1,18 +1,18 @@
 \begin{tabular}{lr}
 \toprule
-{} &  evol\_SSerror \\
+{} &  SSE \\
 \midrule
-count  &     474.00000 \\
-mean   &       0.17879 \\
-std    &       0.23557 \\
-min    &       0.00017 \\
-5\%     &       0.01744 \\
-25\%    &       0.06903 \\
-50\%    &       0.12764 \\
-95\%    &       0.65623 \\
+count  &    1000.00000 \\
+mean   &       0.17326 \\
+std    &       0.23489 \\
+min    &       0.00001 \\
+5\%     &       0.01497 \\
+25\%    &       0.05882 \\
+50\%    &       0.12253 \\
+95\%    &       0.67429 \\
 max    &       1.52941 \\
-median &       0.12764 \\
-skew   &       3.54225 \\
-kurt   &      13.00266 \\
+median &       0.12253 \\
+skew   &       3.41839 \\
+kurt   &      11.92339 \\
 \bottomrule
 \end{tabular}
