finish paper draft

--- a/tex/gambler.tex
+++ b/tex/gambler.tex
@@ -5,7 +5,7 @@
 \begin{document}
 \begin{tikzpicture}[scale=.9]
     \tikzstyle{cooperator} = [rectangle, pattern=north west lines, text width=.25cm]
-    \tikzstyle{defector} = [rectangle, pattern=vertical lines, text width=.25cm]
+    \tikzstyle{defector} = [rectangle, pattern=north east lines, text width=.25cm]
 
 
     % Histories ----------------------------------------
