--- a/tex/medians_tests.tex
+++ b/tex/medians_tests.tex
@@ -1,10 +1,10 @@
 \begin{tabular}{llrrr}
 \toprule
-{} & Best Response Median in: &  Τournament &  Evolutionary Settings &  p-values \\
+{} & Best Response Median in: &  Tournament &  Evolutionary Settings &  p-values \\
 \midrule
-0 &       Distribution $p_1$ &         0.0 &                0.00000 &       0.0 \\
-1 &       Distribution $p_2$ &         0.0 &                0.19847 &       0.0 \\
-2 &       Distribution $p_3$ &         0.0 &                0.00000 &       0.0 \\
-3 &       Distribution $p_4$ &         0.0 &                0.00000 &       0.0 \\
+&       Distribution $p_1$ &         0.0 &                0.00000 &       0.0 \\
+&       Distribution $p_2$ &         0.0 &                0.19847 &       0.0 \\
+&       Distribution $p_3$ &         0.0 &                0.00000 &       0.0 \\
+&       Distribution $p_4$ &         0.0 &                0.00000 &       0.0 \\
 \bottomrule
 \end{tabular}
