tweaks to theorem

--- a/main.tex
+++ b/main.tex
@@ -420,7 +420,7 @@ following Lemma:
     \]
 \end{lemma}
 
-The proof is given in the Appendix A.
+% The proof is given in the Appendix~\ref{appendix:proof_lemma_four}.
 
 Note that there is no immediate way to find the zeros of \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\);
 
@@ -938,6 +938,9 @@ A variety of software libraries have been used in this work:
 
 \subsection{Proof of Theorem~\ref{theorem:concavity}}\label{appendix:proof_theorem_three}
 \input{tex/proof_theorem_three}
+
+% \subsection{Proof of Lemma~\ref{lemma:memone_group_best_response}}\label{appendix:proof_lemma_four}
+% \input{tex/proof_lemma_four}
 
 \end{appendices}
 
