--- a/bibliography.bib
+++ b/bibliography.bib
@@ -363,3 +363,33 @@ isbn="978-3-540-37497-8"
   title = {Elementary Linear Algebra: Applications Version},
   year = 2014
 }
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@misc{glynatsi2019,
+  author       = {Nikoleta E. Glynatsi},
+  title        = {{Raw data for: "Stability of defection,
+                   optimisation of strategies and the limits of
+                   memory in the Prisoner's Dilemma."}},
+  month        = sep,
+  year         = 2019,
+  doi          = {10.5281/zenodo.3402179},
+  url          = {https://doi.org/10.5281/zenodo.3402179}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%PRE PRINT%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Knight2019,
+  author    = {Vincent A. Knight and
+               Marc Harper and
+               Nikoleta E. Glynatsi and
+               Jonathan Gillard},
+  title     = {Recognising and evaluating the effectiveness of extortion in the Iterated
+               Prisoner's Dilemma},
+  journal   = {CoRR},
+  volume    = {abs/1904.00973},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1904.00973},
+  archivePrefix = {arXiv},
+  eprint    = {1904.00973},
+  timestamp = {Wed, 24 Apr 2019 12:21:25 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1904-00973},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
