--- a/main.tex
+++ b/main.tex
@@ -122,34 +122,33 @@ advantageous and became the major paradigm for reciprocal altruism.
 Another trait of Tit for Tat is that it considers only the previous move of the
 opponent. These type of strategies are called \textit{reactive} \cite{Nowak1989}
 and are a subset of so called \textit{memory-one} strategies, which incorporate
-both players' latests moves. Reactive and memory-one strategies have been
-studied thoroughly in, for example~\cite{Nowak1990, Nowak1993}. They have gained
+both players' latests moves. Memory-one strategies have been
+studied thoroughly in the literature~\cite{Nowak1990, Nowak1993} however they have gained
 most of their attention when a certain subset of memory-one strategies was
 introduced in~\cite{Press2012}, the zero-determinant. In~\cite{Stewart2012} it
 was stated that ``Press and Dyson have fundamentally changed the viewpoint on
 the Prisoner's Dilemma''.
 
-Zero-determinant strategies are a special case of memory-one and extortionate
+Zero-determinants are a special case of memory-one and extortionate
 strategies. They chose their actions so that a linear relationship is forced
-between their score and that of the opponent, ensuring that they will always
+between the players' score ensuring that they will always
 receive at least as much as their opponents. Zero-determinant strategies are
 indeed mathematically unique and are proven to be robust in pairwise
 interactions, however, their true effectiveness in tournaments and
 evolutionary dynamics has been questioned~\cite{adami2013, Knight2018,
 Harper2015}.
 
-In a similar fashion to~\cite{Press2012} the purpose of this work is to consider a given
-memory-one strategy, however whilst~\cite{Press2012} found a way for a player to
-manipulate a given opponent, this work will consider a multidimensional
-optimisation approach to identify the best response to a given group of
-opponents. In particular, this work presents a compact method of identifying the
-best response memory-one strategy against a given set of opponents and evaluate
-whether it behaves extortionately, similar to ~\cite{Press2012}.
-
-Further theoretical and empirical results of this work include:
+In a similar fashion to~\cite{Press2012} the purpose of this work is to consider
+a given memory-one strategy, however whilst~\cite{Press2012} found a way for a
+player to manipulate a given opponent, this work will consider a
+multidimensional optimisation approach to identify the best response to a given
+group of opponents. In particular, this work presents a compact method of
+identifying the best response memory-one strategy against a given set of
+opponents and evaluate whether it behaves extortionately, similar to
+zero-determinants. Further theoretical and empirical results of this work
+include:
 
 \begin{enumerate}
-    \item The behaviour of a best response memory-one strategy and 
     \item The factors that make a best response memory-one strategy evolutionary
     robust.
     \item A well designed framework that allows the comparison of an optimal
@@ -169,12 +168,13 @@ originates from~\cite{Nowak1989} where it is stated that if a strategy is
 concerned with only the outcome of a single turn then there are four possible
 `states' the strategy could be in; \(CC, CD, DC,CC\). Therefore, a memory-one
 strategy can be denoted by the probability vector of cooperating after each of
-these states; \(p=(p_1, p_2, p_3, p_4) \in \R_{[0,1]} ^ 4\). In an IPD match two
-memory-one strategies are moving from state to state at each turn with a given
-probability. This exact behaviour can be modeled as a stochastic process, and
-more specifically as a Markov chain (Figure~\ref{fig:markov_chain}). The
-corresponding transition matrix \(M\) of Figure~\ref{fig:markov_chain} is given
-in (\ref{eq:transition_matrix}),
+these states; \(p=(p_1, p_2, p_3, p_4) \in \R_{[0,1]} ^ 4\).
+
+In~\cite{Nowak1989} it was shown that it is not necessary to simulate the play
+of a strategy $p$ against a memory-one opponent $q$. Rather this exact behaviour
+can be modeled as a stochastic process, and more specifically as a Markov chain
+(Figure~\ref{fig:markov_chain}) whose corresponding transition matrix \(M\)
+is given by (\ref{eq:transition_matrix}).
 
 \begin{figure}
     \centering
@@ -187,22 +187,20 @@ in (\ref{eq:transition_matrix}),
     \input{tex/m_matrix.tex}
 \end{equation}
 
-The long run steady state probability vector \(v\) is the solution to \(v M = v\). The
-stationary vector \(v\) can be combined with the payoff matrices of
-(\ref{equ:pd_definition}) and the expected payoffs for each player
-can be estimated without simulating the actual interactions. More
-specifically, the utility for a memory-one strategy \(p\) against an opponent \(q\),
-denoted as \(u_q(p)\), is defined by,
+The long run steady state probability vector \(v\) is the solution to \(v M =
+v\). The stationary vector \(v\) combined with the payoff matrices of
+(\ref{equ:pd_definition}) give the expected payoffs for each player. More
+specifically, the utility for a memory-one strategy \(p\) against an opponent
+\(q\), denoted as \(u_q(p)\), is defined by,
 
 \begin{equation}\label{eq:press_dyson_utility}
     u_q(p) = v \cdot (R, S, T, P).
 \end{equation}
 
-The first theoretical result of this manuscript is presented in
-Theorem~\ref{theorem:quadratic_form_u}. Theorem~\ref{theorem:quadratic_form_u}
-states that \(u_q(p)\) is given by a ratio of two quadratic
-forms~\cite{kepner2011}. To the authors knowledge our work is the fist to explore
-the form of \(u_q(p)\).
+To the authors knowledge there has been no previous work which explored the form
+of \(u_q(p)\) any further. This manuscript proves that \(u_q(p)\) is given by a
+ratio of two quadratic forms~\cite{kepner2011}, as presented in
+Theorem~\ref{theorem:quadratic_form_u}.
 
 \begin{theorem}\label{theorem:quadratic_form_u}
     The expected utility of a memory-one strategy \(p\in\mathbb{R}_{[0,1]}^4\)
@@ -241,7 +239,7 @@ the form of \(u_q(p)\).
     \boldmath\(\bar{c} = \input{tex/c_denominator}\),
     }
     \end{equation}
-    and the constant terms by \(a = \input{tex/numerator_constant}\) and
+    and the constant terms \(a, \bar{a}\) are defined as \(a = \input{tex/numerator_constant}\) and
     \(\bar{a} = \input{tex/denominator_constant}\).
 \end{theorem}
 
@@ -261,6 +259,7 @@ The source code used in this manuscript has been written in a sustainable manner
 It is open source (\url{https://github.com/Nikoleta-v3/Memory-size-in-the-prisoners-dilemma})
 and tested which ensures the validity of the results. It has also been archived
 and can be found at.
+%TODO archive software
 
 \begin{figure}[!htbp]
     \begin{center}
@@ -294,7 +293,7 @@ Theorem~\ref{theorem:tournament_utility}.
         \frac{1}{N} \sum\limits_{i=1} ^ {N} {u_q}^{(i)} (p) = \frac{1}{N}
         \frac{\sum\limits_{i=1} ^ {N} (\frac{1}{2} pQ^{(i)} p^T + c^{(i)} p + a^ {(i)})
         \prod\limits_{\tiny\begin{array}{l} j=1 \\ j \neq i \end{array}} ^
-        N (\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)})}
+        N (\frac{1}{2} p\bar{Q}^{(j)} p^T + \bar{c}^{(j)} p + \bar{a}^ {(j)})}
         {\prod\limits_{i=1} ^ N (\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)})}.
     \end{equation}
 \end{theorem}
@@ -304,7 +303,7 @@ manipulation.
 
 Similar to the previous result, the formulation of
 Theorem~\ref{theorem:tournament_utility} is validated using numerical
-simulations, where the 10 memory-one strategies described in~\cite{Stewart2012}
+simulations where the 10 memory-one strategies described in~\cite{Stewart2012}
 have been used as the opponents. Figure~\ref{fig:stewart_plotkin_results} shows
 that the simulated behaviour has been captured successfully.
 
@@ -313,7 +312,7 @@ that the simulated behaviour has been captured successfully.
     \includegraphics[width=.5\linewidth]{img/Stewart_tournament_results.pdf}
     \caption{The utilities of memory-one strategies \((\frac{1}{3}, \frac{1}{3}, \frac{1}{3}, p_4)\) for
     \(p_4 \in \{0,  \frac{1}{19}, \frac{2}{19}, \dots, \frac{18}{19}, 1\}\)
-    against the 10 memory-one strategies used in~\cite{Stewart2012}.}
+    against the 10 memory-one strategies described in~\cite{Stewart2012}.}
     \label{fig:stewart_plotkin_results}
     \end{center}
 \end{figure}
@@ -322,8 +321,7 @@ The list of strategies from~\cite{Stewart2012} was also used to check whether
 the utility against a group of strategies could be captured by the utility
 against the mean opponent. Thus whether condition (\ref{eq:condition}) holds.
 However condition~(\ref{eq:condition}) fails, as shown in
-Figure~\ref{fig:hypothesis}, thus we can not consider the utility against the mean
-player instead on (\ref{eq:tournament_utility}).
+Figure~\ref{fig:hypothesis}.
 
 \begin{equation}\label{eq:condition}
     \frac{1}{N} \sum_{i=1} ^ {N} {u_q}^{(i)} (p) = u_{\frac {1}{N} \sum\limits_{i=1} ^ N q^{(i)}}(p),
@@ -333,29 +331,29 @@ player instead on (\ref{eq:tournament_utility}).
     \begin{center}
     \includegraphics[width=.5\linewidth]{img/mean_vs_average_heatmap.pdf}
     \end{center}
-    \caption{The difference between the average utility and against
-    the utility against the average player of the strategies in~\cite{Stewart2012}.
-    A positive difference indicates that the condition (\ref{eq:condition})
-    does not hold.}
+    \caption{The difference between the average utility against the opponents
+    from~\cite{Stewart2012} and the utility against the average player of the
+    strategies in~\cite{Stewart2012}. A positive difference indicates that
+    condition (\ref{eq:condition}) does not hold.}
     \label{fig:hypothesis}
 \end{figure}
 
 Two theoretical results have been presented so far. The formulation of
 Theorem~\ref{theorem:tournament_utility} which allows for the utility of a
 memory-one strategy against any number of opponents to be estimated without
-simulating the interactions is the main results used in this manuscript. In
+simulating the interactions is the main result used in this manuscript. In
 Section~\ref{section:best_response_mem_one} it is used to  define best response
 memory-one strategies and explore the conditions under which defection dominates
 cooperation.
 
 \section{Best responses to memory-one players}\label{section:best_response_mem_one}
 
-This section focused on best responses and more specifically \textit{best
-response memory-one} strategies. A \textit{best response} is the strategy which
-corresponds to the most favorable outcome~\cite{Tadelis2013}, thus a best
-response memory-one corresponds to a strategy \(p^*\) for which
-(\ref{eq:tournament_utility}) is maximised. This is considered as a multi dimensional
-optimisation problem given by:
+This section focused on best responses and more specifically \textit{memory-one
+best response} strategies. A \textit{best response} is the strategy which
+corresponds to the most favorable outcome~\cite{Tadelis2013}, thus a memory-one
+best response corresponds to a strategy \(p^*\) for which
+(\ref{eq:tournament_utility}) is maximised. This is considered as a multi
+dimensional optimisation problem given by:
 
 \begin{equation}\label{eq:mo_tournament_optimisation}
     \begin{aligned}
@@ -405,7 +403,7 @@ following Lemma:
 
     The set \(S_q\) is defined as all the possible combinations of:
 
-    \[
+    \begin{equation}\label{eq:s_q_set}
         S_q =
         \left\{p \in \mathbb{R} ^ 4 \left|
             \begin{aligned}
@@ -417,10 +415,10 @@ following Lemma:
                 \bullet\quad  p \in \{0, 1\} ^ 4
             \end{aligned}\right.
         \right\}.
-    \]
+    \end{equation}
 \end{lemma}
 
-% The proof is given in the Appendix~\ref{appendix:proof_lemma_four}.
+The proof is given in the Appendix~\ref{appendix:proof_lemma_four}.
 
 Note that there is no immediate way to find the zeros of \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\);
 
@@ -451,7 +449,7 @@ subset \(S_q\), can done analytically. The points for any or all of \(p_i \in
 roots of the partial derivatives which are a set of polynomials of equations
 (\ref{eq:polynomials_roots}) is feasible using resultant
 theory~\cite{Jonsson2005}. However, for large systems these quickly become
-intractable and numerical methods taking advantage of the structure will be used
+intractable. As a result, numerical methods taking advantage of the structure will be used
 which are described in Section~\ref{section:numerical_experiments}. The rest of
 the section focuses on an immediate theoretical result from
 Lemma~\ref{lemma:memone_group_best_response}.
@@ -461,12 +459,13 @@ Lemma~\ref{lemma:memone_group_best_response}.
 An immediate result from Lemma~\ref{lemma:memone_group_best_response} can be
 obtained by evaluating the sign of the derivative
 (\ref{eq:mo_tournament_derivative}) at \(p=(0, 0, 0, 0)\). If at that point the
-derivative is negative, then the utility of the player maximises their utility
+derivative is negative, then a player maximises their utility
 by playing as a Defector, and their utility would only decrease if they were
 to change their behaviour. Thus, defection is the best response.
 
 \begin{lemma}\label{lemma:stability_of_defection}
-    In a tournament of \(N\) players where \(q^{(i)} = (q_{1}^{(i)}, q_{2}^{(i)}, q_{3}^{(i)}, q_{4}^{(i)})\)
+    In a tournament of \(N\) players \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
+    for \(q^{(i)} \in \R_{[0, 1]} ^ 4\)
     defection is a best response if the transition probabilities of the
     opponents satisfy conditions (\ref{eq:defection_condition_one}) and (\ref{eq:defection_condition_two}).
 
@@ -507,7 +506,6 @@ setting where in each the prevalence of each type of strategy was determined by
 that strategy's success in the previous round, then in a population such that
 (\ref{eq:defection_condition_one}) and (\ref{eq:defection_condition_two}) hold,
 defection would prevail; thus cooperation would never occur.
-
 This is demonstrated in Figures~\ref{fig:stable_defection} and~\ref{fig:unstable_defection}.
 
 \begin{figure}[!htb]
@@ -535,19 +533,22 @@ This is demonstrated in Figures~\ref{fig:stable_defection} and~\ref{fig:unstable
     \end{subfigure}
 \end{figure}
 
+Lemma~\ref{lemma:stability_of_defection} is last theoretical result presented
+in this manuscript. The following section focuses on numerical experiments.
+
 \section{Numerical experiments} \label{section:numerical_experiments}
 
-This section covers numerical experiments. The results of these experiments rely
-on estimating best responses, but as stated in
+The results of this section rely on estimating best responses, but as stated in
 Section~\ref{section:best_response_mem_one}, estimating best responses
-analytically can quickly become an intractable problem. As a result, best responses will be
-estimated heuristically using Bayesian optimisation~\cite{Mokus1978}.
-Bayesian optimisation is a global optimisation algorithm that has proven to
-outperform many other popular algorithms~\cite{Jones2001}. The algorithm builds
-a bayesian understanding of the objective function which it is well suited to the
-multiple local optimas in the described search area of this work. Differential
-evolution~\cite{Storn1997} was also considered, however it was not selected due
-to Bayesian being computationally more efficient.
+analytically can quickly become an intractable problem. As a result, best
+responses will be estimated heuristically using Bayesian
+optimisation~\cite{Mokus1978}. Bayesian optimisation is a global optimisation
+algorithm that has proven to outperform many other popular
+algorithms~\cite{Jones2001}. The algorithm builds a bayesian understanding of
+the objective function which it is well suited to the multiple local optimas in
+the described search area of this work. Differential evolution~\cite{Storn1997}
+was also considered, however it was not selected due to Bayesian being
+computationally more efficient.
 
 As an example let's consider the optimisation problem of
 (\ref{eq:mo_tournament_optimisation}). Figure~\ref{bayesian_example}
@@ -567,36 +568,37 @@ changed in the last 10\% iterations then a further 20 iterations are considered.
     \label{bayesian_example}
 \end{figure}
 
-Now that Bayesian optimisation has been introduced the following sections focus
-on three experiments. In Section~\ref{subsection:best_response_n_2} the behaviour
-of a large set of memory-one best responses is evaluated. In Section
-\ref{subsection:best_respnse_evolutionary_setting} a similar set is evaluated
-but this time best responses consider self interactions as well. Finally in
-Section~\ref{subsection:longer_memory_best_response} the performances of
-memory-one and longer-memory best responses against a number of opponents is
-compared.
+The rest of the section is structured as follows. In
+Section~\ref{subsection:best_response_n_2} Bayesian optimisation is used to
+generate a data set containing memory-one best responses. Furthermore, using a
+method introduced in~\cite{Knight2019} the extortionate behaviour of these best
+responses will be evaluated. In Section
+\ref{subsection:best_respnse_evolutionary_setting} a similar set has been
+generated and evaluated but this time best responses consider self interactions
+as well. Finally Section~\ref{subsection:longer_memory_best_response} compares
+the performances of memory-one and longer-memory best responses against a number
+of opponents.
 
 \subsection{Best response memory-one strategies for \(N=2\)}\label{subsection:best_response_n_2}
 
-As briefly discussed in Section~\ref{section:introduction}
-zero-determinant strategies have been praised for their robustness against a
-single opponent. By forcing a linear relationship between the scores
-zero-determinant strategies can always receive a higher, or in the case of
-mutual defection, the same payoff as their opponents. In IPD tournaments the
-winner is decided on the average score a strategy received and not by wins, so
-winning against an opponent does not guarantee a strategy's success.
+As briefly discussed in Section~\ref{section:introduction} zero-determinant
+strategies have been praised for their robustness against a single opponent.
+Zero-determinants extortionate behaviour reassures that the strategies will
+never lose a game. Though extortion works in pairwise interactions this paper
+argues that in multi opponent interactions, where the payoffs matter, strategies
+trying to exploit their opponents suffer.
 
-We argue that by trying to exploit their opponents zero-determinant strategies
-suffer in multi opponent interaction where the payoffs matter. In comparison,
-best response memory-one strategies utilise their behaviour to gain the most
-from their interactions. The aim of this section is to understand whether best
-responses behave in an extortionate way, similarly to zero determinants. To
-estimate a strategy's extortionate behaviour the SSE method as described in
-[Knight 2019] is used. SSE is defined as how far, a strategy is from
-behaving extortionate, for example a high SSE implies a non extortionate behaviour.
+In comparison to zero-determinants, best response memory-one strategies that
+have a theory of mind of their opponents utilise their behaviour in order to
+gain the most from their interactions. he question that arises then is whether
+best response strategies are the optimal because they behave in an extortionate
+way, similarly to zero determinants. To estimate a strategy's extortionate
+behaviour the SSE method as described in ~\cite{Knight2019} is used. SSE is
+defined as how far, a strategy is from behaving extortionate, for example a high
+SSE implies a non extortionate behaviour.
 
-A large data set of best response memory-one strategies when \(N=2\) has been
-generated which is available here. The data set contains a total of 1000 trials
+A data set of best response memory-one strategies when \(N=2\) has been
+generated which is available at~\cite{glynatsi2019}. The data set contains a total of 1000 trials
 corresponding to 1000 different instances of a best response strategy. For each
 trial a set of 2 opponents is randomly generated, the memory-one best response
 against them is estimated. Though the probabilities \(q_i\) of the opponents are
@@ -660,9 +662,7 @@ that compose the population can adapt and change their behaviour based on the
 outcomes of their interactions at each generation. In these processes self
 interactions are key. In this section the formulation of best responses is
 extended to evolutionary settings, and more specifically to include self
-interactions. Similarly to Section~\ref{subsection:best_response_n_2} this is
-done so that the behaviour of evolutionary best response memory-one strategies
-can be evaluated.
+interactions.
 
 Self interactions can be incorporated in the formulation
 that has been used so far. The utility of a memory-one strategy in an
@@ -727,7 +727,7 @@ detected. A numerical example of the algorithm is given in Figure~\ref{fig:best_
 
 The algorithm has been used to estimate the best response in an evolutionary
 setting for each 1000 pairs of opponents described in Section~\ref{subsection:best_response_n_2}.
-These are included in the data set. The distribution of SSE for the best response
+These are included in the data set~\cite{glynatsi2019}. The distribution of SSE for the best response
 using evolutionary dynamics is given in Figure~\ref{fig:sserror_mem_one} and a
 statistical summary of it's distribution in Table~\ref{table:sserror_stats}.
 
@@ -819,12 +819,12 @@ with 500 turns and 200 repetitions, moreover, (\ref{eq:gambler_optimisation})
 is solved numerically using Bayesian optimisation.
 
 Similarly to previous sections, a large data set has been generated with
-instances of an optimal Gambler and a memory-one best response. For each trial
-two random opponents have been selected. The distributions of their transition
-probabilities are given in Figures
+instances of an optimal Gambler and a memory-one best response, available
+at~\cite{glynatsi2019}. For each trial two random opponents have been selected.
+The distributions of their transition probabilities are given in Figures
 \ref{fig:first_opponents_probabilities_with_gambler} and
 \ref{fig:first_opponents_probabilities_with_gambler}. A total of 120 trials have
-been collected which are available here.
+been collected.
 
 \begin{figure}[!htbp]
     \begin{subfigure}{0.49\textwidth}
@@ -847,11 +847,11 @@ memory (in order to remember the opening moves of the opponent) the information
 the strategy considers is not significantly larger than memory-one strategies.
 Even so, it is evident from Figure~\ref{fig:utilities_gambler_mem_one} that
 Gambler will always performs the same or better than a best response memory one
-strategy, thus having a shorter memory is limiting. This seems to be at odd with
-the result of~\cite{Press2012} which stated that ..., but as indicated by Sections
-having adaptability is crucial to optimising ones score in the IPD. Memory allows
-for that adaptability, and we believe that is the advantage exhibited here by
-Gambler.
+strategy. This seems to be at odd with the result of~\cite{Press2012} that
+against a memory-one opponent having a longer memory will give a strategy any
+advantage. However, against two memory-one opponents Gambler that has a longer
+memory performs better than the optimal memory-one strategy, thus having a
+shorter memory is limiting.
 
 \begin{figure}[!htbp]
     \centering
@@ -862,9 +862,8 @@ Gambler.
 
 \section{Conclusion}
 
-This manuscript considers \textit{best responses} in the IPD strategies, and
-more specifically, \textit{memory-one best responses}. It has transformed the
-continuous problem of best responses to a discrete one and proved that there is
+This manuscript considers \textit{best response} strategies in the IPD game, and
+more specifically, \textit{memory-one best responses}. It has shown that there is
 a compact way of identifying a memory-one best response to a group of opponents.
 Moreover, it has proven that there exists a condition for which in an
 environment of memory-one opponents defection is the dominant and stable choice.
@@ -880,7 +879,6 @@ stationary state, we proved that the utilities can be written as a ration of two
 quadratic forms in $R^4$, Theorem~\ref{theorem:quadratic_form_u}. This was
 extended to include multiple opponents as the IPD is commonly studied in such
 situations, Theorem~\ref{theorem:tournament_utility}.
-
 The formulation of Theorem~\ref{theorem:tournament_utility} and the result that
 the utility has a form allowed us to introduce an approach for identifying
 memory-one best responses to any number of opponents,
@@ -899,7 +897,6 @@ was generated. This allowed us to investigate their respective behaviours and
 whether it was extortionate acts that made them most favorable strategies.
 However, it was shown that it was not extortion but adaptability that allowed
 the strategies to gain the most from their interactions.
-
 In Section~\ref{subsection:longer_memory_best_response}, the performance of
 memory-one strategies was put against the performance of a longer memory
 strategy called Gambler. There were several cases where the Gambler would outperform
@@ -907,7 +904,6 @@ the memory-one strategy, however a memory-one strategy never managed to outperfo
 a Gambler. This result occurred whilst considering a Gambler with a sufficiently
 larger memory but not a sufficiently larger amount of information regarding
 the game.
-
 All the empirical results presented in this manuscript have been for the
 case of $N=2$. In future work we would consider larger values of $N$, however, we
 believe that for larger values of $N$ the results that have been presented here would
@@ -939,8 +935,8 @@ A variety of software libraries have been used in this work:
 \subsection{Proof of Theorem~\ref{theorem:concavity}}\label{appendix:proof_theorem_three}
 \input{tex/proof_theorem_three}
 
-% \subsection{Proof of Lemma~\ref{lemma:memone_group_best_response}}\label{appendix:proof_lemma_four}
-% \input{tex/proof_lemma_four}
+\subsection{Proof of Lemma~\ref{lemma:memone_group_best_response}}\label{appendix:proof_lemma_four}
+\input{tex/proof_lemma_four}
 
 \end{appendices}
 
